Intermediary docs update

--- a/splat/src/docs/sun243.tex
+++ b/splat/src/docs/sun243.tex
@@ -2777,7 +2777,7 @@ Niemeyer (\htmladdnormallink{http://www.beanshell.org}
 
 \subsection{This release (3.0)}
 
-Starlink SPLAT now a tool for the Virtual Observatory and has been
+Starlink SPLAT is now a tool for the Virtual Observatory and has been
 renamed to \SPLAT.
 
 In this release Starlink \SPLAT\ has been enhanced to access prototype
