Implemented totally new way of handling line identifier files. This makes line identifiers available as part of the webstart version of SPLAT for the first time, and paves the way for identifiers that can be automatically matched against a displayed set of spectra (still to do the hard work)

--- a/splat/src/docs/sun243.tex
+++ b/splat/src/docs/sun243.tex
@@ -2481,7 +2481,8 @@ The various options are:
   \item \hitext{Median} take the running median value over a
         number of positions.
   \item \hitext{Profile} smooth the values using a profile matched
-        to typical line shapes, Gaussian, Lorentzian and Voigt.
+        to typical line shapes, Gaussian, Lorentzian and Voigt and
+        the standard Hanning, Hamming, Welch and Barlett filters.
   \item \hitext{Spectrum} smooth the values using a profile
         defined in another spectrum (allows you to create kernels
         that match some shape, rather than just the standard profiles).
