Correct advice about source velocities. These are _towards_ the source reference frame, previously I assumed away

--- a/splat/src/docs/sun243.tex
+++ b/splat/src/docs/sun243.tex
@@ -1529,7 +1529,7 @@ In the following picture you can see that I have an observation (topocentric)
 of NGC1275 (RA: 03:19:47.49, Dec: 41:30:40.5 FK5 J2000) made in air,
 calibrated in angstroms, taken in June 1999 on the William Herschel
 Telescope. I've also entered that NGC1275 as observed from the centre of the
-Sun (heliocentric) has a recessional velocity of 5300km/s.
+Sun (heliocentric) has a recessional velocity of 5300km/s (that is -5300).
 
 \mainfigure{coordinatesystemwindow}
 
