Add Petr Skoda acknowledgements.

--- a/splat/src/docs/sun243.tex
+++ b/splat/src/docs/sun243.tex
@@ -984,7 +984,7 @@ the display area.\\
 
   \item[\inline{postscriptprint}] Same as the print option, except, this only
   offers to write a postscript file and doesn't rely on having any printers
-  installed on the local machine. The output can be in encapsulated form 
+  installed on the local machine. The output can be in encapsulated form
   for inclusion in other documents.
 
   \item[\inline{jpeg}] Make a JPEG image version of the display area. Again
@@ -2880,6 +2880,11 @@ The BeanShell (remote control and scripting) is written by Pat
 Niemeyer (\htmladdnormallink{http://www.beanshell.org}
                             {http://www.beanshell.org}).
 
+The flip toolbox and Hermitian interpolating polynomials are based on the
+similiar functionality in the SPEFO program, and were suggested by Petr Skoda
+(skoda@sunstel.asu.cas.cz, these features are particularly useful for hot star
+research, contact Petr for further details).
+
 \section{Changes}
 
 \subsection{This release (3.2)}
@@ -2912,7 +2917,7 @@ Other changes of note in this release:
 \item The grid drawn around the spectra can now be forced to stay within
       the visible region of the plot window. This makes it easier to view
       the spectral data values and coordinates, but at a performance cost.
-      Switch on the option \labelitem{Only display grid axes in visible area} 
+      Switch on the option \labelitem{Only display grid axes in visible area}
       to see this in action.
 
 \item Postscript output can now be created in encapsulated form.
@@ -2926,7 +2931,7 @@ Other changes of note in this release:
 \item Support for line identifiers to match against spectra that have data
       units has been added.
 
-\item SED example data can now be loaded from the main \labelitem{Options} 
+\item SED example data can now be loaded from the main \labelitem{Options}
       menu.
 
 \item The data and coordinate units of the current spectrum in a plot
