--- a/splat/src/docs/sun243.tex
+++ b/splat/src/docs/sun243.tex
@@ -25,9 +25,9 @@
 Research Councils}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {243.6}
+\newcommand{\stardocnumber}    {243.7}
 \newcommand{\stardocauthors}   {Peter W. Draper}
-\newcommand{\stardocdate}      {24 May 2005}
+\newcommand{\stardocdate}      {30 June 2005}
 \newcommand{\stardoctitle}     {SPLAT-VO -- A VO-enabled Spectral Analysis Tool}
 \newcommand{\stardocversion}   {3.2}
 \newcommand{\stardocmanual}    {User's Manual}
@@ -368,8 +368,9 @@ analysis facilities.
 The current set of analysis facilities include background estimation by the
 fitting of a polynomial to selected parts of a spectrum or by drawing an
 interpolated spline, the fitting of Gaussian, Lorentzian and Voigt profiles to
-emission and absorption lines and the filtering of spectra using average,
-median and line-shape window functions as well as wavelet denoising.
+emission and absorption lines, the filtering of spectra using average,
+median and line-shape window functions as well as wavelet denoising and
+the calculation of statistics.
 A database of laboratory line positions is available to aid in identification.
 
 \SPLAT\ also supports a full range of coordinate systems for spectra,
@@ -1056,6 +1057,9 @@ the display area.\\
   \item[\inline{flip}] Show the toolbox for flipping, shifting or redshifting
   editable spectra shown in the plot. Also allows you create an editable copy
   of the current spectrum.
+
+  \item[\inline{sigma}] Show the toolbox for determining statistics (mean,
+  standard deviation, \etc) of the whole or parts of the current spectrum.
 
  \end{itemize}
 
@@ -2549,6 +2553,7 @@ The various options are:
         spectrum.
 \end{itemize}
 
+\newpage
 \subsection{Quick change of coordinate or data units window}
 
 This window allows you to change the coordinate or data units of the current
@@ -2563,6 +2568,7 @@ flexibility, particularly when setting spectral coordinates.
 If you do not want to change the units of an axis, just leave the value set at
 "Unknown".
 
+\newpage
 \subsection{Flip or shift or redshift a spectrum}
 
 This window allows you to do three related jobs.
@@ -2597,6 +2603,112 @@ Source is used to determine the redshift transform). In this latter case use
 the coordinate system toolbox to transform to another rest frame first.
 
 The \labelitem{Reset} button returns a spectrum to an offset of zero.
+
+\subheading{SPEFO options}
+\begin{quote}
+The original motivation for creating this tool (suggested by Petr Skoda, see
+the acknowledgements section) was really to do flip comparisons of lines to
+determine radial velocities in the same fashion as the SPEFO program. This has
+some additional requirements beyond those required for simple shifting in a
+linear sense, as well as in redshift, and are enabled by selecting the
+\submenuitem{Options}{SPEFO options} menu item. This reveals two text areas
+(you need to resize the window to actually see them first time). The upper one
+shows the flip corrected offset (that's half the standard shift) and the
+radial velocity for that flipped shift (calculated as $c*Offset*0.5/(Flip
+centre)$), assuming that the coordinate system is some wavelength.
+
+There's also an editable area for writing some notes about the measurement,
+both these areas are written the file \hitext{SPEFO.log} by pressing the
+\labelitem{Save to SPEFO.log file} button.
+
+\end{quote}
+
+
+\newpage
+\subsection{Region statistics window}
+
+Using this window you can get simple constantly updated statistics on regions
+of the current spectrum, or fuller statistics for the whole spectrum, or
+collections of regions.
+
+Constantly updated statistics for regions are:
+\begin{itemize}
+\item Mean
+\item Standard deviation
+\item Minimum
+\item Maximum
+\end{itemize}
+
+When you use the buttons along the bottom of the window these are extended to
+also include:
+\begin{itemize}
+\item Median
+\item Mode
+\item Sum
+\item Number of data points
+\end{itemize}
+Note that the Mode is determined as $3*Median-2*Mean$, not from a
+distribution, so will not be correct for highly skewed distributions.
+
+Finally if you select the \submenuitem{Options}{Show extra stats} menu item
+you can also see:
+\begin{itemize}
+\item Sum of squares
+\item RMS (square root of the mean square)
+\item Variance
+\item Standard error
+\item $25\%$ and $75\%$ quantiles
+\item Skew
+\item Kurtosis
+\end{itemize}
+
+To get statistics for the whole of the current spectrum just press the 
+\labelitem{Whole stats} button. If you want statistics for parts of the
+spectrum you will need to define the coordinate ranges you want to use (see
+the next part), and then press the \labelitem{Selected stats} button to get
+statistics for the selected regions combined together (if none are selected
+then all regions are used), or \labelitem{All stats} to get statistics for all
+the regions combined together.
+
+\subheading{Coordinate ranges}
+\begin{quote}
+This part of the window is used to define the regions of the spectra
+that you want to see statistics for. Once defined you will see simple,
+continuously updated, statistics. You can also get fuller statistics using the
+\labelitem{Selected stats} and \labelitem{All stats} buttons.
+
+To add a region press the \labelitem{Add} button and then drag out a
+region in the display area of the plot window. This should result in
+the creation of a green rectangular figure.
+
+You can interact with the figure, moving it side-to-side and resizing it. To
+do this point at the figure and press the left mouse button. This `selects'
+the figure and adds \hitext{grips} to its exterior. Note that it also becomes
+the selected row in the \labelitem{Coordinate ranges:} table. To move the
+figure just drag it and to resize it drag a grip (the little black
+squares). The associated coordinate range in the table updates with these
+changes.
+
+To add a second range just press \labelitem{Add} and repeat. The ranges can be
+overlapped or not.
+
+To fine tune the ranges you can edit the values in the ranges table, just
+point at the coordinate you want to change and double click the left mouse
+button. This should enable the text editing cursor. Just make the
+modifications you want and press \hitext{<Return>} to make the changes
+permanent. (Note: if your spectra have sky coordinates shown for the X axis,
+then you should use the same format for your edits).
+
+To read a set of ranges from a disk file choose the 
+\submenuitem{File}{Read ranges} menu item. 
+The format of the input file is simple. It should have at least two fields
+separated by whitespace or commas. Comments are indicated by lines starting
+with a hash (\#) and are ignored. You can also save the ranges and simple
+statistics to disk file using (\submenuitem{File}{Save ranges}). It is also
+possible to append the contents of the \labelitem{Full stats log:} region to
+the file \hitext{SPLATStats.log} by pressing the \labelitem{Save to log file}
+button.
+\end{quote}
 
 \newpage
 \section{Supported data formats\xlabel{data_formats}}
@@ -2910,6 +3022,9 @@ Other changes of note in this release:
 \item Spectra can now be drawn using point markers of various kinds.
 
 \item A new tool for setting the data units of spectra has been introduced.
+
+\item A new tool for obtaining statistics about a spectrum, or regions of a
+      spectrum has been introduced.
 
 \item A new tool for transforming spectra by a redshift or by a flip and or
       translation has been introduced.
